# ai-agent-template

./: .gitignore  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
agent/: Dockerfile  app.py  requirements.txt
agent/src/: llms.py  schemas.py
events/: bedrock.json  event.json  nvdia.json
frontend/: app.py
tests/unit/: test_handler.py
